force-app/main/default/objects/leaseworks__Lease_Stage__c/leaseworks__Lease_Stage__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Lease Staging</label>
    <nameField>
        <label>Lease Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leases Staging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>