force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Assumed_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Uncheck if only Actual utilisation should be used for invoicing and Supplemental Rent calculation. Assumed/Estimated will be ignored</inlineHelpText>
    <label>Z_unused_2203 Assumed Invoicing</label>
    <type>Checkbox</type>
</CustomField>