force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Bank_Guaranty__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Guaranty__c</fullName>
    <label>Bank Guaranty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>