force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Bank_Name_LSR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Name_LSR__c</fullName>
    <label>Lessor Bank Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>