force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Choice_of_Forum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Choice_of_Forum__c</fullName>
    <label>Choice Of Forum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>