force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Contractual_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contractual_Delivery_Date__c</fullName>
    <label>Contractual Delivery Date</label>
    <type>Date</type>
</CustomField>