force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Correction_For_Non_business_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Correction_For_Non_business_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Soruce: Volito. Asana: Lease Summary</description>
    <label>Correction For Non-business Days?</label>
    <type>Checkbox</type>
</CustomField>