force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Fit_For_Operational_Region__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fit_For_Operational_Region__c</fullName>
    <label>Fit For Operational Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>