force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Governing_Law__c</fullName>
    <label>Governing Law</label>
    <length>30</length>
    <type>Text</type>
</CustomField>