force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Head_Lesor_II__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Head_Lesor_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Lessor II</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leases Staging (Head Lessor II)</relationshipLabel>
    <relationshipName>Leases_Staging1</relationshipName>
    <type>Lookup</type>
</CustomField>