force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__HPT_Allocation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__HPT_Allocation__c</fullName>
    <label>HPT Allocation (%)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>