force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__ISASSIGNED__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ISASSIGNED__c</fullName>
    <description>Status which tells you if this lease has an aircraft assigned to it</description>
    <inlineHelpText>Status which tells you if this lease has an aircraft assigned to it</inlineHelpText>
    <label>ISASSIGNED</label>
    <length>1</length>
    <type>Text</type>
</CustomField>