force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Latest_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Latest_Payment_Date__c</fullName>
    <description>Source : Fortress</description>
    <label>_Latest Payment Date</label>
    <type>Date</type>
</CustomField>