force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Lease_Novation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Novation_Date__c</fullName>
    <label>Lease Novation Date</label>
    <type>Date</type>
</CustomField>