force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Lease_Start_Date_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Start_Date_New__c</fullName>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>