force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Lease_Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Term_in_Months__c</fullName>
    <label>Redelivery Period in Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>