force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Legal_Ownr__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Legal_Ownr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leases Staging (Legal Owner)</relationshipLabel>
    <relationshipName>Leases_Staging2</relationshipName>
    <type>Lookup</type>
</CustomField>