force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Lessor_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Account_Name__c</fullName>
    <label>Lessor Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>