force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Letter_of_Credit_Expiry__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Letter_of_Credit_Expiry__c</fullName>
    <label>Letter of Credit Expiry</label>
    <type>Date</type>
</CustomField>