force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Low_Season_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Low_Season_Start_Date__c</fullName>
    <description>Date on which low season starts</description>
    <inlineHelpText>Date on which low season starts</inlineHelpText>
    <label>Z_Unused_2009 Low Season Start Date</label>
    <type>Date</type>
</CustomField>