force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve__c</fullName>
    <label>Maintenance Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>