force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__MR_Escalation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Escalation__c</fullName>
    <description>Escalation percentage considered for Airframe and Assemblies. LLPs have its own escalation.</description>
    <inlineHelpText>Escalation percentage effected yearly.</inlineHelpText>
    <label>General MR Escalation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>