force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__MRR_APU__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MRR_APU__c</fullName>
    <description>Amount set aside for each Flight Hour accomplished by the APU during that calendar month</description>
    <inlineHelpText>Amount set aside for each Flight Hour accomplished by the APU during that calendar month</inlineHelpText>
    <label>Current  MRR APU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>