force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Next_Annual_Inspection__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Next_Annual_Inspection__c</fullName>
    <label>Next Annual Inspection</label>
    <type>Date</type>
</CustomField>