force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Overdue_Check_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Overdue_Check_Days__c</fullName>
    <label>Rent Overdue Reminder (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>