force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Pct_AR_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Pct_AR_Account__c</fullName>
    <label>% AR Account</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>