force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Redelivery_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Redelivery_Date__c</fullName>
    <label>Redelivery Date</label>
    <type>Date</type>
</CustomField>