force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Region__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Region__c</fullName>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>