force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Rent_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Due_Day__c</fullName>
    <description>Day of the month when rent is due</description>
    <inlineHelpText>Day of the month when rent is due</inlineHelpText>
    <label>Rent Due Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>