force-app/main/default/objects/leaseworks__Lease_Stage__c/fields/leaseworks__Reserve_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reserve_Type__c</fullName>
    <label>Reserve Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Reserves</fullName>
            </value>
            <value>
                <fullName>End of Lease Adjustment</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>LOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>